# Metamaster

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  README copy.md  README.md  alembic.ini  cliff.toml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.codacy/: codacy.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-commit
alembic/: env.py
app/: __init__.py  celery_app.py  celery_beat.py  config.py  database.py  init_db.py  logging_config.py  main.py  models.py  openapi_export.json  openapi_formatted.json  schemas.py  services.py  services_impl.py  tasks.py
docs/: ADMIN.md  ADMIN_GUIDE.md  ALERTING.md  API.md  API_AUTHENTICATION.md  API_CLIENT_EXAMPLES.md  API_ERRORS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUTH_DESIGN.md  AUTH_USAGE.md  CICD.md  CI_CD_PIPELINE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_BACKUP_RECOVERY.md  DEPLOYMENT_CLOUD.md  DEPLOYMENT_DATABASE.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_KUBERNETES.md  DEPLOYMENT_LOCAL.md  DEPLOYMENT_SECURITY.md  DEPLOYMENT_TROUBLESHOOTING.md  ENDPOINTS_BATCH.md  ENDPOINTS_CACHE.md  ENDPOINTS_HEALTH.md  ENDPOINTS_MOVIES.md  ENDPOINTS_TASKS.md  ENDPOINTS_TV_SHOWS.md  FAQ.md  GLOSSARY.md  GRAFANA_DASHBOARDS.md  INFRASTRUCTURE_AS_CODE.md  LOGGING.md  MONITORING.md  QUICK_REFERENCE.md  USER_GUIDE.md  USER_GUIDE_BATCH_OPERATIONS.md  USER_GUIDE_MOVIES.md  (+5 more)
frontend/: .auditci.json  .editorconfig  .env.example  .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  lighthouse-budget.json  lighthouserc.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
plans/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM_SUMMARY.md  EMPTY_STATES_AND_CONFIG.md  ENVIRONMENT_AND_CICD_CLARIFICATION.md  ERROR_HANDLING_IMPLEMENTATION.md  FRONTEND_DEPLOYMENT_GUIDE.md  FULL_STACK_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  PHASE2_INFRA_BREAKDOWN.md  PHASE3_VERIFICATION_REPORT.json  PHASE4_VERIFICATION_REPORT.md  PHASE6_VERIFICATION_REPORT.json  (+18 more)
(+627 files in other folders)
