[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamaster"
version = "0.0.1"
description = "Media metadata management and enrichment system"
requires-python = ">=3.9"

[tool.pytest.ini_options]
# Set Python path for test discovery
pythonpath = ["."]

# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test directory
testpaths = ["tests"]

# Markers for test categorization
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test multiple components together",
    "e2e: End-to-end tests that test complete workflows",
    "slow: Tests that take a long time to run",
    "performance: Performance and benchmark tests",
    "database: Tests that require database access",
    "redis: Tests that require Redis access",
    "external_api: Tests that call external APIs",
    "docker: Tests that require Docker",
]

# Coverage options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

# Asyncio mode for pytest-asyncio
asyncio_mode = "auto"

# Timeout for tests (in seconds)
timeout = 300

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv_test
  | venv_celery
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
